Closed Bug 1317837 Opened 8 years ago Closed 8 years ago

RasterImage::RequestDecodeForSize should set mWantFullDecode just like StartDecoding if we don't have our size yet

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

Details

Attachments

(1 file)

      No description provided.
Attached patch patchSplinter Review
Attachment #8811058 - Flags: review?(aosmond)
Attachment #8811058 - Flags: review?(aosmond) → review+
Pushed by tnikkel@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f03cdaa7c326
RasterImage::RequestDecodeForSize should set mWantFullDecode just like StartDecoding if we don't have our size yet. r=aosmond
https://hg.mozilla.org/mozilla-central/rev/f03cdaa7c326
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: